--- a/Inventory/Wholeseller list/Wholesellerlist.html
+++ b/Inventory/Wholeseller list/Wholesellerlist.html
@@ -29,12 +29,16 @@
           <tr>
             <th>ID</th>
             <th>Name</th>
+            <th>Specialty Product</th>
             <th>Contact Number</th>
             <th>Email</th>
             <th>Address</th>
             <th>Tax ID/GSTIN</th>
             <th>MOQ</th>
-            <th>Credit Balance (₹)</th>
+            <th>Total Amount (₹)</th>
+            <th>Udhari (₹)</th>
+            <th>Remaining Amount to Pay (₹)</th>
+            <th>Items Sold</th>
             <th>Actions</th>
           </tr>
         </thead>
@@ -73,8 +77,27 @@
               <input type="number" id="wholesalerMOQ" min="0" />
             </div>
             <div class="form-group">
-              <label for="creditBalance">Credit Balance (₹):</label>
-              <input type="number" id="creditBalance" step="0.01" value="0.0" />
+              <label for="totalAmount">Total Amount (₹):</label>
+              <input type="number" id="totalAmount" step="0.01" value="0.0" />
+            </div>
+            <div class="form-group">
+              <label for="udhari">Udhari (₹):</label>
+              <input type="number" id="udhari" step="0.01" value="0.0" />
+            </div>
+            <div class="form-group">
+              <label for="remainingAmountToPay"
+                >Remaining Amount to Pay (₹):</label
+              >
+              <input
+                type="number"
+                id="remainingAmountToPay"
+                step="0.01"
+                value="0.0"
+              />
+            </div>
+            <div class="form-group">
+              <label for="specialtyProduct">Specialty Product:</label>
+              <input type="text" id="specialtyProduct" />
             </div>
             <button
               type="submit"
